fix web-font related vertical jumping

--- a/src/components/drop-down/css/drop-down.scss
+++ b/src/components/drop-down/css/drop-down.scss
@@ -29,6 +29,7 @@
   &--enhanced {
 
     /* styles when component is completely enhanced */
+    height: 46px;
 
   }
 
@@ -77,7 +78,6 @@
       content: '';
       position: absolute;
       right: 33px;
-      transition: all .1s;
 
     }
 
